# dive

./: .gitignore  README.md
movie-frontend/: README.md  angular.json  package-lock.json  package.json
movie-frontend/src/: styles.css
movie-frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.module.ts
movie-frontend/src/app/components/movie-carousel/: movie-carousel.component.css  movie-carousel.component.html  movie-carousel.component.ts
movie-frontend/src/app/components/movies-list/: movies-list.component.css  movies-list.component.html  movies-list.component.ts
movie-frontend/src/app/components/star-rating/: star-rating.component.css  star-rating.component.html  star-rating.component.ts
movie-frontend/src/app/models/: movie.ts
movie-frontend/src/app/services/: movie.service.ts
movie_backend/: pyproject.toml
movie_backend/movie_app/: models.py
movie_backend/movie_app/migrations/: 0002_movie_image.py
movie_backend/movie_project/: settings.py  urls.py
movie_project/: pyproject.toml
movie_project/movie_app/: urls.py  views.py
movie_project/movie_app/migrations/: 0001_initial.py
movie_project/movie_project/: settings.py
