[tool.poetry]
name = "movie-project"
version = "0.1.0"
description = "A basic movie CRUD app"
authors = ["jkr <jaroslavkrbec@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
